; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/uiports/extr_svgawin.c_ui_destroy_window.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/uiports/extr_svgawin.c_ui_destroy_window.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TEXT = common dso_local global i32 0, align 4
@sdata = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ui_destroy_window() #0 {
  %1 = call i32 (...) @keyboard_close()
  %2 = load i32, i32* @TEXT, align 4
  %3 = call i32 @vga_setmode(i32 %2)
  %4 = load i64, i64* @sdata, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %0
  %7 = load i64, i64* @sdata, align 8
  %8 = call i32 @xfree(i64 %7)
  br label %9

9:                                                ; preds = %6, %0
  ret void
}

declare dso_local i32 @keyboard_close(...) #1

declare dso_local i32 @vga_setmode(i32) #1

declare dso_local i32 @xfree(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
